==> ryanuo/cstudy/stm32/test407/App/OLED.c <==
#include "stm32f4xx_hal.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>
#define OLED_SCL_PORT  GPIOB
#define OLED_SCL_PIN   GPIO_PIN_8
#define OLED_SDA_PORT  GPIOB
#define OLED_SDA_PIN   GPIO_PIN_9

static void OLED_W_SCL(uint8_t BitValue) {
    HAL_GPIO_WritePin(OLED_SCL_PORT, OLED_SCL_PIN, (GPIO_PinState)BitValue);
}

static void OLED_W_SDA(uint8_t BitValue) {
    HAL_GPIO_WritePin(OLED_SDA_PORT, OLED_SDA_PIN, (GPIO_PinState)BitValue);
}
