==> E-Minecraft-2/jog_first_test/Hardware/OLED.c <==
#include "stm32f10x.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>
#define OLED_SCL       GPIO_Pin_6    //PB6
#define OLED_SDA       GPIO_Pin_7    //PB7

void OLED_W_SCL(uint8_t BitValue)
{
	GPIO_WriteBit(GPIOB, OLED_SCL, (BitAction)BitValue);
}

void OLED_W_SDA(uint8_t BitValue)
{
	GPIO_WriteBit(GPIOB, OLED_SDA, (BitAction)BitValue);
}
